syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.danila.score";
option java_outer_classname = "ScoreProto";

package score;

service ScoreService {
  rpc GetUserScore (ScoreRequest) returns (ScoreResponse);
}

message ScoreRequest {
  string login = 1;
}

message ScoreResponse {
  float score = 1;
}
